# meshnetmap

./: .gitignore  CO_LOCATION_FIX.md  DYNAMIC_VIZ.md  FINAL_SUMMARY.md  README.md  infer_connections.py  infer_connections_v2.py  nodes.yaml.example  pair_device.py  pyproject.toml  quickstart.sh  requirements.txt  setup.py  test_dynamic_viz.py  test_simulator.py
docs/: CO_LOCATION_FIX.md  DYNAMIC_VIZ.md  INFERENCE.md
meshnetmap/: __init__.py  __main__.py  cli.py  inference.py
meshnetmap/collector/: aggregator.py  collect.py  scanner.py
meshnetmap/visualizer/: display.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_inference.py  test_visualizer.py
